partly improved sizing of legend now that transated text is longer

--- a/tigamap/templates/tigamap/validated_report_map.html
+++ b/tigamap/templates/tigamap/validated_report_map.html
@@ -178,10 +178,10 @@
                 border-top-right-radius: 15px;
                 border-bottom-right-radius: 15px;
                 position: absolute;
-                left: -270px;
+                left: -320px;
                 border: 1px solid;
                 bottom: 80px;
-                width: 370px;
+                width: 430px;
                 min-height: 330px;
                 overflow: hidden;
                 -moz-transition: left 1s ease;
@@ -250,7 +250,7 @@
             }
 
             .legend-popup-table {
-                width: 200px;
+                width: 240px !important;
                 border: 1px solid;
                 text-align: left;
                 padding: 5px !important;
@@ -582,7 +582,7 @@
                 </div>
                 <div class="leaflet-popup legend-popup" style="opacity: 1;">
                     <div class="leaflet-popup-content-wrapper">
-                        <div class="leaflet-popup-content" style="width: 201px;">
+                        <div class="leaflet-popup-content" style="width: 250px;">
                             <table class="legend-popup-table">
                                 <tr>
                                     <td><strong>{% trans 'expert_row_title' %}:</strong> {% trans 'expert_row_help' %}
