embedded map testing urls and views created

--- a/tigamap/templates/tigamap/app_new.html
+++ b/tigamap/templates/tigamap/app_new.html
@@ -139,6 +139,7 @@ function removeMe(){
 
 {% block main_body %}
 
+    {% block navbar %}
     <!-- NAVBAR
     ================================================== -->
     <div class="navbar-wrapper">
@@ -232,7 +233,7 @@ function removeMe(){
         </div>
     </div>
 
-
+{% endblock %}
 
 {% block map_area %}
 <div id="tigamap" class="leaflet-container-default"></div>
