--- a/tigamap/templates/tigamap/coverage_map_new.html
+++ b/tigamap/templates/tigamap/coverage_map_new.html
@@ -101,11 +101,16 @@
                 left: 0;
             }
 
+            .legend-main-table-container {
+                max-width: 50px;
+                position: absolute;
+                right: 50px;
+                top: 10px;
+            }
+
+
             .legend-main-table {
-                max-width: 60px;
-                float: right;
-                margin-right: 2px;
-                margin-top: 30px;
+                max-width: 50px;
             }
 
             .legend-main-table, .legend-main-table tr, .legend-main-table td {
@@ -322,6 +327,8 @@
 {% block legend %}
 
     <div class="legend">
+
+        <div class="legend-main-table-container">
         <table class="legend-main-table">
             <tr>
                 <td colspan="2">
@@ -359,9 +366,8 @@
 
                 </td>
             </tr>
-
         </table>
-
+</div>
         <div class="legend-blurb"><p style="font-weight: bold; text-align: center">{% trans 'coverage_legend_info_title' %}</p>
             {% trans 'coverage_legend_info_blurb' %}
         </div>
