font size slightly smaller on adult report legend for better fit in ipad

--- a/tigamap/templates/tigamap/validated_report_map.html
+++ b/tigamap/templates/tigamap/validated_report_map.html
@@ -244,7 +244,7 @@
                 padding: 4px;
                 text-align: left;
                 vertical-align: middle;
-                font-size: 1em;
+                font-size: .9em;
             }
 
             .legend-popup-area {
