more minor formatting on legend

--- a/tigamap/templates/tigamap/validated_report_map.html
+++ b/tigamap/templates/tigamap/validated_report_map.html
@@ -183,7 +183,7 @@
                 border: 1px solid;
                 bottom: 60px;
                 width: 430px;
-                min-height: 350px;
+                min-height: 340px;
                 overflow: hidden;
                 -moz-transition: left 1s ease;
                 -webkit-transition: left 1s ease;
@@ -532,7 +532,7 @@
             <table class="legend-main-table">
                 <tr>
                     <td colspan="2">
-                        <p style="font-weight: bold;">{% trans 'adult_report_legend_main_title' %}</p>
+                        <p style="font-weight: bold; font-size: 1.2em;">{% trans 'adult_report_legend_main_title' %}</p>
                     </td>
                 </tr>
 
