--- a/tigamap/templates/tigamap/coverage_map_new.html
+++ b/tigamap/templates/tigamap/coverage_map_new.html
@@ -89,7 +89,7 @@
                 position: absolute;
                 left: -350px;
                 border: 1px solid;
-                bottom: 80px;
+                bottom: 60px;
                 width: 460px;
                 min-height: 330px;
                 overflow: hidden;
@@ -128,7 +128,7 @@
                 top: 20px !important;
                 text-align: justify;
                 z-index: 1;
-                font-size: small;
+                font-size: .9em;
                 max-width: 330px;
             }
 
