font size within popups fixed

--- a/tigamap/templates/tigamap/validated_report_map.html
+++ b/tigamap/templates/tigamap/validated_report_map.html
@@ -30,7 +30,7 @@
 
         .popup-table table {
             border-collapse: collapse;
-            font-size: smaller !important;
+            font-size: .9em !important;
             table-layout: fixed;
             width: 182px;
         }
@@ -68,7 +68,7 @@
             padding-bottom: 10px;
             padding-left: 2px;
             padding-right: 2px;
-            font-size: smaller;
+            font-size: .9em;
         }
 
         .black {
@@ -90,7 +90,7 @@
         }
 
         .note-div {
-            font-size: smaller;
+            font-size: .9em;
             padding: 5px;
         }
 
