--- a/tigamap/templates/tigamap/base.html
+++ b/tigamap/templates/tigamap/base.html
@@ -4,6 +4,7 @@
   <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 	<meta http-equiv="content-type" content="text/html; charset=utf-8"/>
+  <meta name="format-detection" content="telephone=no">
 	<title>Tigatrapp Map</title>
 
     {% leaflet_js %}
