--- a/tigamap/templates/tigamap/coverage_map_new.html
+++ b/tigamap/templates/tigamap/coverage_map_new.html
@@ -379,7 +379,7 @@
                 </div>
 
                 <div id="more_info_button">
-                    <a href="http://atrapaeltigre.com" target="_blank">
+                    <a href="{% trans 'map_help_url_new' %}" target="_blank">
                         <div class="info-button-background"><img width="30px" height="30px"
                                                                  src="{% static "tigamap/info_button.png" %}"></div>
                     </a>
