--- a/tigamap/templates/tigamap/validated_report_map.html
+++ b/tigamap/templates/tigamap/validated_report_map.html
@@ -318,7 +318,7 @@
 
     {% block leaflet_marker_clusters %}
         {% leaflet_js plugins="marker_cluster_yellow" %}
-        {% leaflet_css plugins="marker_cluster_yellow" %}
+        {% leaflet_css plugins="marker_cluster_yellow_single" %}
     {% endblock %}
 
     <script src="{% static "tigamap/jquery-1.11.1.min.js" %}"></script>
@@ -632,7 +632,7 @@
                 </div>
 
                 <div id="more_info_button">
-                    <a href="http://atrapaeltigre.com" target="_blank">
+                    <a href="{% trans 'map_help_url_new' %}" target="_blank">
                         <div class="info-button-background"><img width="30px" height="30px"
                                                                  src="{% static "tigamap/info_button.png" %}"></div>
                     </a>
