fixed coverage link

--- a/tigamap/templates/tigamap/coverage_map_new.html
+++ b/tigamap/templates/tigamap/coverage_map_new.html
@@ -183,6 +183,7 @@
                 position: absolute;
                 bottom: 6px;
                 right: 120px;
+                z-index: 1000;
             }
 
             .legend:hover #hand-left {
@@ -383,8 +384,8 @@
                         <div class="info-button-background"><img width="30px" height="30px"
                                                                  src="{% static "tigamap/info_button.png" %}"></div>
                     </a>
-                </div>
 
+                </div>
 
 
                         <i id="hand-left" style="padding-left:10px;" class="fa fa-hand-o-left fa-2x"></i>
