--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -61,7 +61,7 @@
         var mosquito_icon = new mosquito_icon_class;
 
         {% for form in formset %}
-        function map_init_basic{{ form.instance.report.version_UUID }}(map, options) {
+        function map_init_basic{{ form.instance.id }}(map, options) {
 
             L.marker([{{ form.instance.report.lat }}, {{ form.instance.report.lon }}], {icon: mosquito_icon}).addTo(map);
 
@@ -156,16 +156,19 @@
     {{ formset.management_form }}
         {% for form in formset %}
             <div class="row">
-
+<strong>Report {{ form.instance.report.version_UUID }}</strong>
                 <div class="col-md-3">
-<strong>Report {{ form.instance.report.version_UUID }}}</strong>
                     <br><br>
                     {{ form.as_p }}
                 </div>
 
                 <div class="col-md-5">
 
+                    <div style="overflow: auto;max-height: 100px;">
+
                     {{ form.instance.report.photo_html | safe}}
+
+                    </div>
 
                     <br><br><br>
                     <strong>User Notes:</strong><br>
@@ -174,7 +177,7 @@
 
                 <div class="col-md-4">
                 <p>{{ form.instance.report.creation_time }} UTC</p>
-                    <div id="report{{ form.instance.report.version_UUID }}" class="task_map-container"></div>
+                    <div id="map{{ form.instance.id }}" class="task_map-container"></div>
                 </div>
 
             </div>
@@ -265,8 +268,8 @@
                         options = {djoptions: djoptions, initfunc: loadmap,
                             globals: false, callback: window.map_init_basic};
 
-                    L.Map.djangoMap('report{{ form.instance.report.version_UUID }}', {djoptions: djoptions, initfunc: loadmap,
-                        globals: false, callback: eval("window.map_init_basic{{ form.instance.report.version_UUID }}")});
+                    L.Map.djangoMap('map{{ form.instance.id }}', {djoptions: djoptions, initfunc: loadmap,
+                        globals: false, callback: eval("window.map_init_basic{{ form.instance.id }}")});
                 {% endfor %}
 
             }
