--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -166,9 +166,9 @@
 
                 <div class="col-md-5">
 
-                    <div style="overflow: auto;max-height: 100px;">
+                    <div style="overflow: auto;max-height: 500px;">
 
-                    {{ form.instance.report.photo_html | safe}}
+                    {{ form.instance.report.photo_html_for_report_validation | safe}}
 
                     </div>
 
