--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -166,7 +166,7 @@
 
                 <div class="col-md-5">
 
-                    <div style="overflow: auto;max-height: 500px;margin-top:5px;">
+                    <div style="overflow: auto;max-height: 500px;margin-top:10px;">
 
                     {{ form.instance.report.photo_html_for_report_validation | safe}}
 
@@ -178,7 +178,7 @@
                 </div>
 
                 <div class="col-md-4">
-                    <div id="map{{ form.instance.id }}" class="task_map-container"></div>
+                    <div id="map{{ form.instance.id }}" class="task_map-container" style="margin-top:10px;"></div>
                 </div>
 
             </div>
