--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -165,7 +165,7 @@
 
                 <div class="col-md-5">
 
-                    <div style="overflow: auto;max-height: 800px;margin-top:10px;">
+                    <div style="overflow: auto;height: 500px;margin-top:10px;">
 
                     {{ form.instance.report.photo_html_for_report_validation | safe}}
 
@@ -179,7 +179,7 @@
                 </div>
 
                 <div class="col-md-4">
-                    <div id="map{{ form.instance.id }}" class="task_map-container" style="margin-top:20px;"></div>
+                    <div id="map{{ form.instance.id }}" class="report_annotation_map-container"></div>
                 </div>
 
             </div>
