expert style changes

--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -164,7 +164,7 @@
                 </div>
 
                 <div class="col-md-5">
-
+                <strong>Photos</strong> (scroll to see all; click to enlarge)<br>
                     <div style="overflow: auto;height: 500px;margin-top:10px;">
 
                     {{ form.instance.report.photo_html_for_report_validation | safe}}
@@ -172,8 +172,8 @@
                     </div>
 
                     <br><br>
-                    <strong>User Notes:</strong><br>
-                    <div  style="overflow: auto;height: 200px;margin-top:10px;border:solid;">
+                    <strong>User Notes</strong><br>
+                    <div  style="overflow: auto;height: 200px;margin-top:10px;border:1px solid #333333;">
                     {{ form.instance.report.note }}
                         </div>
                 </div>
