--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -160,26 +160,30 @@
 <strong>Report: {{ form.instance.report.version_UUID }}</strong>, Created: {{ form.instance.report.creation_time }} UTC
                  </div>
                 <div class="col-md-3">
+                   <br>
                     {{ form.as_p }}
                 </div>
 
                 <div class="col-md-5">
+                    <br>
                 <strong>Photos</strong> (scroll to see all; click to enlarge)<br>
-                    <div style="overflow: auto;height: 500px;margin-top:10px;">
+                    <div style="overflow: auto;height: 700px;">
 
                     {{ form.instance.report.photo_html_for_report_validation | safe}}
 
                     </div>
 
-                    <br><br>
-                    <strong>User Notes</strong><br>
-                    <div  style="overflow: auto;height: 200px;margin-top:10px;border:1px solid #333333;">
-                    {{ form.instance.report.note }}
-                        </div>
                 </div>
 
                 <div class="col-md-4">
+                                        <br>
+                    <strong>Location</strong>
                     <div id="map{{ form.instance.id }}" class="report_annotation_map-container"></div>
+                    <br>
+                    <strong>User Notes</strong><br>
+                    <div  style="overflow: auto;height: 200px;border:1px solid #333333;">
+                    {{ form.instance.report.note }}
+                        </div>
                 </div>
 
             </div>
